--- a/FNSProject/templates/footer.html
+++ b/FNSProject/templates/footer.html
@@ -18,6 +18,7 @@
         <p><b>본 홈페이지는 풋볼러버에 의해서 개발 및 관리하고 있습니다.</b></p>
         <p>문의 | fbloverofficial@gmail.com | Tel. 070-7913-0113</p>
         <p>상호명 | 풋볼러버 Football Lover | 사업자번호 | 419-25-00866 | 대표 : 양준석 </p>
+        <p>통신판매번호 | 2020-충남천안-510</p>
         <p>[우:31020] 충청남도 천안시 서북구 성환읍 대학로 91 창업동아리관 4층 4204호(남서울대학교)</p>
         <p>
           <b>
